--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "apollo-link-context": "^1.0.20",
+    "apollo-upload-client": "^14.1.3",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
@@ -14,6 +16,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
