--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "apollo-upload-client": "^14.1.3",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
@@ -22,6 +23,7 @@
     "react-toastify": "^6.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
